--- a/backend/GreenEscape-backend/api/templates/views/scoreboard.html
+++ b/backend/GreenEscape-backend/api/templates/views/scoreboard.html
@@ -68,7 +68,7 @@
             <h2>Top Players (By Seed)</h2>
             <label for="seedInput">Enter Seed:</label>
             <input type="number" id="seedInput" placeholder="Enter seed">
-            <button onclick="fetchSeedScoreboard()">Show</button>
+            <button id="showButton" onclick="fetchSeedScoreboard()">Show</button>
             <table class="scoreTable">
                 <thead>
                     <tr>
